--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "browser-sync": "^2.11.1",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
+    "html-loader": "^0.4.3",
+    "ngtemplate-loader": "^1.3.1",
     "node-sass": "^3.4.2",
     "script-loader": "^0.6.1",
     "webpack": "^1.12.13",
